<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/sign_up_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#eee"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/sign_up_txt_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="26dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_rounded_white"
            android:hint="@string/user_name"
            android:inputType="text"
            android:padding="12dp" />

        <EditText
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/rectangle_rounded_white"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp" />


        <EditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/rectangle_rounded_white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp" />

        <EditText
            android:id="@+id/com_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/rectangle_rounded_white"
            android:hint="@string/com_password"
            android:inputType="textPassword"
            android:padding="12dp" />

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/button_bg"
            android:padding="12dp"
            android:text="@string/sign_up"
            android:textColor="#fff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtGotoSignin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/have_acc"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</ScrollView>
