<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/sign_up_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#eee"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/sign_up_txt_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/sign_up_edt_username"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/sign_up_edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/sign_up_edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/sign_up_edt_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sign_up_btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/button_bg"
            android:text="@string/sign_up"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/sign_up_txt_go_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/don_have_acc"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</ScrollView>

