<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/sign_in_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#eee"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/sign_in_txt_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:errorEnabled="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_bg">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="2dp"
                    android:contentDescription="@string/app_name"
                    android:paddingLeft="2dp"
                    android:paddingStart="2dp"
                    android:paddingEnd="0dp"
                    android:paddingRight="0dp"
                    android:src="@mipmap/ic_launcher" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/sign_in_edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:background="@drawable/edit_text_bg2"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp" />

            </LinearLayout>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:errorEnabled="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_bg">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="2dp"
                    android:contentDescription="@string/app_name"
                    android:paddingLeft="2dp"
                    android:paddingStart="2dp"
                    android:paddingEnd="0dp"
                    android:paddingRight="0dp"
                    android:src="@mipmap/ic_launcher" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/sign_in_edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:background="@drawable/edit_text_bg2"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp" />

            </LinearLayout>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sign_in_btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/button_bg"
            android:text="@string/sign_up"
            android:textColor="#fff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/sign_in_txt_don_have_acc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/don_have_acc"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</ScrollView>

