<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/loadingProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradiennt1"
        android:gravity="center"
        android:orientation="vertical">

        <com.tuyenmonkey.mkloader.MKLoader
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:mk_color="#ffffff"
            app:mk_type="Sharingan" />

        <TextView
            android:id="@+id/loading_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            tools:text="loading text" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/verifyLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/gradiennt1"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:text="Log in with Mobile Number"
            android:textColor="#ffffff"
            android:textSize="22sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="40dp"

                android:paddingEnd="40dp">

                <TextView
                    android:id="@+id/firstText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:paddingTop="18dp"
                    android:text="@string/verify_note"
                    android:textColor="#ffffff"
                    android:textSize="14sp" />


                <com.rilixtech.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="18dp"
                    app:ccp_countryPreference="NG,GH,ZA,EG"
                    app:ccp_defaultNameCode="NG"
                    app:ccp_showFullName="true"
                    app:ccp_textColor="#ffffff" />


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="@string/hint_phone_num"
                    android:inputType="phone"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff" />


                <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textColor="#ffffff"-->
                <!--android:text="Code Instructions"-->
                <!--android:textSize="12sp"-->
                <!--android:id="@+id/directions"-->
                <!--android:gravity="center"-->
                <!--android:layout_marginTop="20dp"-->
                <!--android:layout_marginBottom="20dp"-->
                <!--/>-->

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/ic_send_violet"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/log_with_phone"
                    android:textColor="#ffffff" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/inputCodeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/gradiennt1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:text="@string/verify_code"
            android:textColor="#ffffff"
            android:textSize="24sp"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:paddingStart="30dp"
            android:paddingTop="18dp"
            android:paddingEnd="30dp"
            android:text="@string/pls_type_verify_code"
            android:textColor="#ffffff"
            android:textSize="14sp" />

        <com.goodiebag.pinview.Pinview
            android:id="@+id/sms_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cursorVisible="false"
            app:forceKeyboard="false"
            app:hint="0"
            app:inputType="number"
            app:password="false"
            app:pinHeight="30dp"
            app:pinLength="6"
            app:pinWidth="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:paddingStart="30dp"
            android:paddingTop="18dp"
            android:paddingEnd="30dp"
            android:text="@string/not_receive_verify"
            android:textColor="#ffffff"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_wait"
                android:textColor="#ffffff"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#f5ea3d"
                android:textSize="12sp"
                tools:text="0:30 " />
        </LinearLayout>

        <Button
            android:id="@+id/resend_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:background="@drawable/ic_send_violet"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/resend_code"
            android:textColor="#ffffff"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>
